Re structered entire project

--- a/script/makefile
+++ b/script/makefile
@@ -1,3 +1,10 @@
+###########################################################################################
+#
+# AUTHOR
+# ------
+# Lumberjacks Incorperated (2018)
+#
+###########################################################################################
 
 NeuralProject: NeuralNetwork.o NeuralProjectDriver.o
 	gcc -o NeuralProject NeuralNetwork.o NeuralProjectDriver.o
@@ -7,9 +14,6 @@ NeuralProjectDriver.o: NeuralProjectDriver.c NeuralNetwork.h
 
 NeuralNetwork.o: NeuralNetwork.c NeuralNetwork.h
 	gcc -c NeuralNetwork.c
-
-
-
 
 clean:
 	$(RM) NeuralProject *.o
